# netbox-zabbix-status

./: Dockerfile  LICENSE  README.md  pyproject.toml
netbox_zabbix_status/: __init__.py  choices.py  filtersets.py  forms.py  jobs.py  matching.py  models.py  navigation.py  search.py  sync.py  tables.py  template_content.py  urls.py  views.py  widgets.py  zabbix.py
netbox_zabbix_status/api/: serializers.py  urls.py  views.py
netbox_zabbix_status/management/commands/: sync_zabbix.py  zabbix_check.py
netbox_zabbix_status/migrations/: 0001_initial.py  0002_zabbixconfiguration.py  0003_zabbixconfiguration_include_suppressed_and_more.py  0004_zabbixconfiguration_dashboard_severities.py  0005_zabbixconfiguration_sync_interval.py  0006_zabbixconfiguration_created_and_more.py  0007_zabbixproblem_zabbix_triggerid.py  0008_zabbixconfiguration_site_id_tag_key.py  0009_zabbixhost_zabbix_tags.py  0010_zabbixconfiguration_visible_tag_keys.py  0011_zabbixhost_unique_pairing.py
netbox_zabbix_status/templates/netbox_zabbix_status/: dashboard.html  host_import.html  host_tab.html  settings.html  unmatched_hosts.html  unmonitored_devices.html  unmonitored_vms.html  zabbixhost.html  zabbixhost_list.html  zabbixproblem_list.html
netbox_zabbix_status/templates/netbox_zabbix_status/buttons/: bulk_regenerate_tags.html  bulk_rematch.html
netbox_zabbix_status/templates/netbox_zabbix_status/inc/: history_card.html  host_panel.html  hosts_table_controls.html  import_device_form.html  import_vm_form.html
netbox_zabbix_status/templates/netbox_zabbix_status/widgets/: problems.html
