[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-zabbix-status"
version = "0.1.0"
description = "Read-only zobrazenie stavu Zabbix monitoringu v NetBoxe"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "zabbix_utils>=2.0",
]

[tool.setuptools.packages.find]
include = ["netbox_zabbix_status*"]
