# Packaging for the Zabbix Status NetBox plugin.
# https://netboxlabs.com/docs/netbox/plugins/development/

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-zabbix-status"
version = "0.5.0"
authors = [
    { name = "Adrián Javorček", email = "adrian.javorcek@gmail.com" },
]
description = "Zabbix monitoring status (hosts, availability, problems) shown on NetBox Devices and VMs, with import of unmatched hosts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["netbox", "netbox-plugin", "zabbix", "monitoring", "network-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "zabbix_utils>=2.0",
]

[project.urls]
Homepage = "https://github.com/adrian-13/netbox-zabbix-status"
Repository = "https://github.com/adrian-13/netbox-zabbix-status.git"
Issues = "https://github.com/adrian-13/netbox-zabbix-status/issues"

[tool.setuptools.packages.find]
include = ["netbox_zabbix_status*"]

[tool.setuptools.package-data]
netbox_zabbix_status = ["templates/netbox_zabbix_status/**/*.html"]
